# do-kubernetes-challenge

./: LICENSE  README.md
deployment/: deployment.yaml  service.yaml
kafka_k8s/: kafka-persistent.yaml  kafka-topic.yaml
sample_app/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
sample_app/app/: config.py  consumer.py  main.py  model.py
sample_app/app/elastic_wrapper/: elasticsearch_wrapper.py
sample_app/app/messaging/: consumer.py  messaging.py  producer.py
sample_app/app/messaging/schemas/: Scoop.avsc
sample_app/app/schemas/: Purchase.avsc
terraform/: .terraform.lock.hcl  cluster.tf  main.tf  networking.tf  outputs.tf  terraform.tfvars  versions.tf
